--- a/src/main/webapp/VIEW/updateDov.xhtml
+++ b/src/main/webapp/VIEW/updateDov.xhtml
@@ -82,6 +82,7 @@
                                              ajax="false"
                                              validateClient="true"
                                              class="ui-button-success"
+                                             disabled="#{vsBean.buttonSuccess}"
                                              action="#{dovBean.submitFormUpdateDov}"/>
                         </p:outputPanel>
 
