--- a/src/main/webapp/VIEW/addIc.xhtml
+++ b/src/main/webapp/VIEW/addIc.xhtml
@@ -34,9 +34,8 @@
                         <span class="field col-12 md:col-4 p-20-0">
                             <p:outputLabel for="input_protocole_version" value="#{I18N['icPage.protocoleVersion']}"/>
                             <p:inputText id="input_protocole_version" class="label" value="#{icBean.ic.protVers}"
-                                         placeholder="#{I18N['icPage.protocoleVersion.placeholder']}"
-                                         required="true">
-                                <p:ajax event="change" process="@this" update="@all" listener="#{icBean.testVsProtoEmpty()}"/>
+                                         placeholder="#{I18N['icPage.protocoleVersion.placeholder']}">
+                                <p:ajax event="blur" process="@this" update="@all" listener="#{icBean.testVsProtoEmpty()}"/>
                             </p:inputText>
                         </span>
                         <div class="ui-message ui-message-error ui-widget ui-corner-all #{icBean.messageErrorVsProt}">
@@ -54,7 +53,6 @@
                                 <f:selectItem itemLabel="#{I18N['notEligible']}"
                                               itemValue="#{false}"/>
                                 <p:ajax process="@this" update="@all"/>
-                                <p:ajax event="blur" process="@this" update="@all" listener="#{icBean.testIeNotMeetNa()}"/>
                             </p:selectOneMenu>
                         </span>
                         <div class="ui-message ui-message-error ui-widget ui-corner-all #{icBean.messageErrorIeNotMeet}">
@@ -86,7 +84,7 @@
                                                var="ieNotMet"
                                                itemLabel="#{ieNotMet.getIeNotMet()}"
                                                itemValue="#{ieNotMet}"/>
-                                <p:ajax event="blur" process="@this" update="@all" listener="#{icBean.testIeNotMeetNa()}"/>
+                                <p:ajax event="change" process="@this" update="@all" listener="#{icBean.testIeNotMeetNa()}"/>
                             </p:selectOneMenu>
                         </span>
                             <div class="ui-message ui-message-error ui-widget ui-corner-all #{icBean.messageErrorIeNotMeet}">
