--- a/src/main/webapp/VIEW/updateRole.xhtml
+++ b/src/main/webapp/VIEW/updateRole.xhtml
@@ -24,7 +24,7 @@
                             <p:inputText id="input_rolename_update" class="label" value="#{roleBean.role.roleLabel}"
                                          placeholder="#{I18N['rolePage.roleLabel.placeholder']}"
                                          validatorMessage="#{I18N['rolePage.roleLabel.errorMessage']}">
-                                <p:ajax update="messageRoleName" event="keyup"/>
+                                <p:ajax event="blur" process="@this" update="@all" listener="#{roleBean.testRoleLabel()}"/>
                             </p:inputText>
                         </span>
                         <p:message id="messageRoleName" for="@previous"/>
@@ -34,12 +34,19 @@
                                         value="#{I18N['messageErrorRoleName']}"/></span>
                             </div>
                         </div>
+                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{roleBean.messageErrorRoleNameLabel}">
+                            <div><span class="ui-message-error-icon"> </span>
+                                <span class="ui-message-error-detail"><h:outputText
+                                        value="#{I18N['rolePage.roleLabel.errorMessage']}"/></span>
+                            </div>
+                        </div>
                     </p:outputPanel>
                     <span class="responsiveSubmit">
                         <p:commandButton value="#{I18N['application.update.role']}"
                                          ajax="false"
                                          validateClient="true"
                                          class="ui-button-success"
+                                         disabled="#{roleBean.buttonSuccess}"
                                          action="#{roleBean.submitFormUpdateRole}"/>
                         <p:commandButton value="#{I18N['connectionpage.return.button']}" action="#{roleBean.cancelForm()}"
                                          class="ui-button-secondary" id="cancelButton"/>
