--- a/src/main/webapp/VIEW/addSite.xhtml
+++ b/src/main/webapp/VIEW/addSite.xhtml
@@ -25,6 +25,7 @@
                                            placeholder="#{I18N['sitePage.siteNum.placeHolder']}"
                                            validatorMessage="#{I18N['sitePage.siteNum.errorMessage']}"
                                            minValue="1000">
+                                <p:ajax event="change" process="@this" update="@all" listener="#{siteBean.testSiteNum()}"/>
                                 <p:ajax update="messageInputSiteNum" event="blur"/>
                             </p:inputNumber>
                         </span>
@@ -35,31 +36,51 @@
                                         value="#{I18N['messageErrorSiteNum']}"/></span>
                             </div>
                         </div>
+                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{siteBean.messageErrorSiteNumMinMax}">
+                            <div><span class="ui-message-error-icon"> </span>
+                                <span class="ui-message-error-detail"><h:outputText
+                                        value="#{I18N['messageErrorSiteNum']}"/></span>
+                            </div>
+                        </div>
                         <span class="field col-12 md:col-4 p-20-0">
                             <p:outputLabel for="inputSiteName" value="#{I18N['sitePage.siteName']}"/>
                             <p:inputText id="inputSiteName" class="label" value="#{siteBean.site.siteName}"
                                          placeholder="#{I18N['sitePage.siteName.placeHolder']}"
                                          validatorMessage="#{I18N['sitePage.siteName.errorMessage']}">
-                                <p:ajax update="messageInputSiteName" event="blur"/>
+                                        <p:ajax update="messageinputSiteName" event="blur"/>
+                                        <p:ajax event="change" process="@this" update="@all" listener="#{siteBean.testSiteName()}"/>
                             </p:inputText>
                         </span>
-                        <p:message id="messageInputSiteName" for="@previous"/>
+                        <p:message id="messageinputSiteName" for="@previous"/>
+                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{siteBean.messageErrorSiteName}">
+                            <div><span class="ui-message-error-icon"> </span>
+                                <span class="ui-message-error-detail"><h:outputText
+                                        value="#{I18N['sitePage.siteName.errorMessage']}"/></span>
+                            </div>
+                        </div>
                         <span class="field col-12 md:col-4 p-20-0">
                             <p:outputLabel for="inputPiName" value="#{I18N['sitePage.piName']}"/>
                             <p:inputText id="inputPiName" class="label" value="#{siteBean.site.piName}"
                                          placeholder="#{I18N['sitePage.piName.placeHolder']}"
                                          validatorMessage="#{I18N['sitePage.piName.errorMessage']}">
-                                <p:ajax update="messageInputPiName" event="blur"/>
+                                <p:ajax event="change" process="@this" update="@all" listener="#{siteBean.testPiName()}"/>
+                                <p:ajax update="messageinputPiName" event="blur"/>
                             </p:inputText>
                         </span>
-                        <p:message id="messageInputPiName" for="@previous"/>
-
+                        <p:message id="messageinputPiName" for="@previous"/>
+                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{siteBean.messageErrorPiName}">
+                            <div><span class="ui-message-error-icon"> </span>
+                                <span class="ui-message-error-detail"><h:outputText
+                                        value="#{I18N['sitePage.piName.errorMessage']}"/></span>
+                            </div>
+                        </div>
                     </p:outputPanel>
                     <span class="responsiveSubmit">
                         <p:commandButton value="#{I18N['sitePage.addSite.create']}"
                                          ajax="false"
                                          validateClient="true"
                                          class="ui-button-success"
+                                         disabled="#{siteBean.buttonSuccess}"
                                          action="#{siteBean.submitFormAddSite}"/>
                         <p:commandButton value="#{I18N['connectionpage.return.button']}" action="#{siteBean.cancelForm()}"
                                          class="ui-button-secondary" id="cancelButton"/>
