--- a/src/main/webapp/VIEW/updateSite.xhtml
+++ b/src/main/webapp/VIEW/updateSite.xhtml
@@ -35,18 +35,32 @@
                                          placeholder="#{I18N['sitePage.siteName.placeHolder']}"
                                          validatorMessage="#{I18N['sitePage.siteName.errorMessage']}">
                                 <p:ajax update="messageInputSiteName" event="blur"/>
+                                <p:ajax event="change" process="@this" update="@all" listener="#{siteBean.testSiteName()}"/>
                             </p:inputText>
                         </span>
                         <p:message id="messageInputSiteName" for="@previous"/>
+                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{siteBean.messageErrorSiteName}">
+                            <div><span class="ui-message-error-icon"> </span>
+                                <span class="ui-message-error-detail"><h:outputText
+                                        value="#{I18N['sitePage.siteName.errorMessage']}"/></span>
+                            </div>
+                        </div>
                         <span class="field col-12 md:col-4 p-20-0">
                             <p:outputLabel for="inputPiName" value="#{I18N['sitePage.piName']}"/>
                             <p:inputText id="inputPiName" class="label" value="#{siteBean.site.piName}"
                                          placeholder="#{I18N['sitePage.piName.placeHolder']}"
                                          validatorMessage="#{I18N['sitePage.piName.errorMessage']}">
+                                <p:ajax event="change" process="@this" update="@all" listener="#{siteBean.testPiName()}"/>
                                 <p:ajax update="messageInputPiName" event="blur"/>
                             </p:inputText>
                         </span>
                         <p:message id="messageInputPiName" for="@previous"/>
+                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{siteBean.messageErrorPiName}">
+                            <div><span class="ui-message-error-icon"> </span>
+                                <span class="ui-message-error-detail"><h:outputText
+                                        value="#{I18N['sitePage.piName.errorMessage']}"/></span>
+                            </div>
+                        </div>
                         <span class="field col-12 md:col-4 p-20-0">
                             <p:outputLabel for="inputStatusSite" value="#{I18N['sitePage.status']}"/>
                             <p:selectOneMenu id="inputStatusSite"
@@ -64,6 +78,7 @@
                                          ajax="false"
                                          validateClient="true"
                                          class="ui-button-success"
+                                         disabled="#{siteBean.buttonSuccess}"
                                          action="#{siteBean.submitFormUpdateSite}"/>
                         <p:commandButton value="#{I18N['connectionpage.return.button']}" action="#{siteBean.cancelForm()}"
                                          class="ui-button-secondary" id="cancelButton"/>
