--- a/src/main/webapp/VIEW/listOfAllEvents.xhtml
+++ b/src/main/webapp/VIEW/listOfAllEvents.xhtml
@@ -55,7 +55,7 @@
                                 <h:commandButton class="btn btn-dark" value="#{I18N['dov.modify']}" action="#{dovBean.findEvent(r.idEvent)}" rendered="#{r.formByIdForm.formNum == 10 and connectionBean.user.roleByIdRole.roleLabel == 'SITE' and r.available}">
                                     <f:setPropertyActionListener target="#{eventBean.event}" value="#{r}"/>
                                 </h:commandButton>
-                                <h:commandLink class="btn btn-dark" value="#{I18N['ic.modify']}" action="/VIEW/updateIc" rendered="#{r.formByIdForm.formNum == 20 and connectionBean.user.roleByIdRole.roleLabel == 'SITE' and r.available}">
+                                <h:commandLink class="btn btn-dark" value="#{I18N['ic.modify']}" action="#{icBean.findEvent(r.idEvent)}" rendered="#{r.formByIdForm.formNum == 20 and connectionBean.user.roleByIdRole.roleLabel == 'SITE' and r.available}">
                                     <f:setPropertyActionListener target="#{eventBean.event}" value="#{r}"/>
                                 </h:commandLink>
                                 <h:commandLink class="btn btn-dark" value="#{I18N['dm.modify']}" action="/VIEW/updateDm" rendered="#{r.formByIdForm.formNum == 30 and connectionBean.user.roleByIdRole.roleLabel == 'SITE' and r.available}">
@@ -76,7 +76,7 @@
                                 <h:commandButton class="btn btn-dark" value="#{I18N['dov.consult']}" action="#{dovBean.findEvent(r.idEvent)}" rendered="#{(r.formByIdForm.formNum == 10 and connectionBean.user.roleByIdRole.roleLabel != 'SITE') or (r.formByIdForm.formNum == 10 and connectionBean.user.roleByIdRole.roleLabel == 'SITE' and !r.available)}">
                                     <f:setPropertyActionListener target="#{eventBean.event}" value="#{r}"/>
                                 </h:commandButton>
-                                <h:commandLink class="btn btn-dark" value="#{I18N['ic.consult']}" action="/VIEW/updateIc" rendered="#{r.formByIdForm.formNum == 20 and connectionBean.user.roleByIdRole.roleLabel != 'SITE'}">
+                                <h:commandLink class="btn btn-dark" value="#{I18N['ic.consult']}" action="#{icBean.findEvent(r.idEvent)}" rendered="#{r.formByIdForm.formNum == 20 and connectionBean.user.roleByIdRole.roleLabel != 'SITE' or (r.formByIdForm.formNum == 20 and connectionBean.user.roleByIdRole.roleLabel == 'SITE' and !r.available)}">
                                     <f:setPropertyActionListener target="#{eventBean.event}" value="#{r}"/>
                                 </h:commandLink>
                                 <h:commandLink class="btn btn-dark" value="#{I18N['dm.consult']}" action="/VIEW/updateDm" rendered="#{r.formByIdForm.formNum == 30 and connectionBean.user.roleByIdRole.roleLabel != 'SITE'}">
