--- a/src/main/webapp/VIEW/addCm.xhtml
+++ b/src/main/webapp/VIEW/addCm.xhtml
@@ -86,7 +86,7 @@
                                              converter="CmindicConverter"
                                              required="true">
                                 <!-- import all enum -->
-                                <p:importEnum type="com.sym022.sym022.enums.cmindic"
+                                <p:importEnum type="com.sym022.sym022.enums.Cmindic"
                                               var="enumCmindic"
                                               allSuffix="getAll"/>
                                 <f:selectItems value="#{enumCmindic.getAll}"
@@ -127,7 +127,7 @@
                                              converter="CmdosuConverter"
                                              required="true">
                                 <!-- import all enum -->
-                                <p:importEnum type="com.sym022.sym022.enums.cmdosu"
+                                <p:importEnum type="com.sym022.sym022.enums.Cmdosu"
                                               var="enumCmdosu"
                                               allSuffix="getAll"/>
                                 <f:selectItems value="#{enumCmdosu.getAll}"
@@ -166,7 +166,7 @@
                                              converter="CmrouteConverter"
                                              required="true">
                                 <!-- import all enum -->
-                                <p:importEnum type="com.sym022.sym022.enums.cmroute"
+                                <p:importEnum type="com.sym022.sym022.enums.Cmroute"
                                               var="enumCmroute"
                                               allSuffix="getAll"/>
                                 <f:selectItems value="#{enumCmroute.getAll}"
@@ -198,7 +198,7 @@
                                              converter="CmfreqConverter"
                                              required="true">
                                 <!-- import all enum -->
-                                <p:importEnum type="com.sym022.sym022.enums.cmfreq"
+                                <p:importEnum type="com.sym022.sym022.enums.Cmfreq"
                                               var="enumCmfreq"
                                               allSuffix="getAll"/>
                                 <f:selectItems value="#{enumCmfreq.getAll}"
